machine learning part

--- a/Assessment - Rule Based with Model/asesmen.ipynb
+++ b/Assessment - Rule Based with Model/asesmen.ipynb
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -169,8 +169,8 @@
    "source": [
     "if __name__ == \"__main__\":\n",
     "    try:\n",
-    "        file_path = './test_image.png'\n",
-    "        predicted_skin_type = predict_skin_type(file_path, 'skintype_model.tflite')\n",
+    "        file_path = './Test Image/normal.png'\n",
+    "        predicted_skin_type = predict_skin_type(file_path, './Skin Type Detection Model/SkinTypeDetectionModel.tflite')\n",
     "        if predicted_skin_type:\n",
     "            input_asesmen = ['a', 'b', ['b'], 'a', ['Aqua', 'Xanthan Gum', 'Water']]\n",
     "            product = recommended_product(input_asesmen, predicted_skin_type)\n",
