changes to the readme file and assessment notebook

--- a/Assessment - Rule Based with Model/asesmen.ipynb
+++ b/Assessment - Rule Based with Model/asesmen.ipynb
@@ -170,7 +170,7 @@
     "if __name__ == \"__main__\":\n",
     "    try:\n",
     "        file_path = './Test Image/normal.png'\n",
-    "        predicted_skin_type = predict_skin_type(file_path, './Skin Type Detection Model/SkinTypeDetectionModel.tflite')\n",
+    "        predicted_skin_type = predict_skin_type(file_path, '../Skin Type Detection Model/SkinTypeDetectionModel.tflite')\n",
     "        if predicted_skin_type:\n",
     "            input_asesmen = ['a', 'b', ['b'], 'a', ['Aqua', 'Xanthan Gum', 'Water']]\n",
     "            product = recommended_product(input_asesmen, predicted_skin_type)\n",
