--- a/Assessment - Rule Based with Model/assessment.ipynb
+++ b/Assessment - Rule Based with Model/assessment.ipynb
@@ -64,7 +64,7 @@
     "    return previous_row[-1]\n",
     "\n",
     "# The dataset used is product_assessment, for string matching only use ingredients\n",
-    "df = pd.read_csv('./product_asesmen.csv')\n",
+    "df = pd.read_csv('./product_assessment.csv')\n",
     "df['ingredients'] = df['ingredients'].fillna('').astype(str)\n",
     "\n",
     "dataset_ingredients = set(\n",
